[package]
name = "chain"
version = "0.1.0"
authors = [ "debris <marek.kotewicz@gmail.com> & Chainpool <http://chainx.org>" ]

[dependencies]
rustc-hex = { version = "2", optional = true }
heapsize = { version = "0.4", optional = true }
bitcrypto = { path = "../crypto", default-features = false }
primitives = { path = "../primitives", default-features = false }
serialization = { path = "../serialization", default-features = false }
sr-std = { git = "https://github.com/paritytech/substrate", default-features = false }
parity-codec = { version = "3.0", default-features = false }
serde_bytes = { git = "https://github.com/serde-rs/bytes", optional = true }
serde = { version = "1.0", optional = true }

[dependencies.parity-scale-codec]
version = "1.0.6"
default-features = false
features = ["derive"]

[features]
default = ["std"]
std = [
    "rustc-hex",
    "heapsize",
    "bitcrypto/std",
    "primitives/std",
    "serialization/std",
    "sr-std/std",
    "serde_bytes",
    "serde",
    "parity-codec/std",
    "parity-scale-codec/std",
]
